# robot_description

./: CMakeLists.txt  README.md  package.xml
config/: example_config.yaml
launch/: robot.launch.py
model/: robot.sdf
rviz/: my_robot.rviz
urdf/: robot.urdf
worlds/: example.world
